update swagger for put and post
